narrow grid gap, fix icon bug

--- a/src/components/main/content/index/dday_grid/dday_grid.module.css
+++ b/src/components/main/content/index/dday_grid/dday_grid.module.css
@@ -1,5 +1,5 @@
 .content {
-    @apply grid h-full w-full grid-cols-2 gap-10 p-7;
+    @apply grid h-full w-full grid-cols-2 gap-x-10 gap-y-4 p-7;
 }
 
 @media (max-width: 1250px) {
